# STAR-RSeQC

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  FINAL_SUMMARY.txt  INSTALLATION_GUIDE.md  LICENSE  QUICK_REFERENCE.md  README.md  TEST_REPORT.md  create-package.sh  docker-compose.override.yml.example  docker-compose.yml  setup.sh  test-setup-simple.sh  test-setup.sh
.github/workflows/: ci.yml  release.yml
src/: checkpoint.rs  config.rs  gtf.rs  main.rs  pipeline.rs  sample.rs  tui.rs
