[package]
name = "star-rseqc"
version = "0.1.0"
edition = "2021"
description = "STAR 2-pass alignment + RSeQC QC pipeline for paired-end RNA-seq"

[[bin]]
name = "star-rseqc"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
crossterm = "0.28"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
